--- a/src/assets/styles/footer.css
+++ b/src/assets/styles/footer.css
@@ -16,7 +16,7 @@ footer {
   width: 10rem;
 }
 
-@media (min-width: 360px) and (max-width: 412px) {
+@media (min-width: 290px) and (max-width: 412px) {
   footer {
     display: flex;
     flex-direction: row;
