--- a/src/assets/styles/header.css
+++ b/src/assets/styles/header.css
@@ -131,7 +131,7 @@ nav {
   }
 }
 
-@media (min-width: 360px) and (max-width: 412px) {
+@media (min-width: 290px) and (max-width: 412px) {
   header {
     height: 3rem;
   }
