--- a/src/assets/styles/menu.css
+++ b/src/assets/styles/menu.css
@@ -148,7 +148,7 @@
   }
 }
 
-@media (min-width: 360px) and (max-width: 412px) {
+@media (min-width: 290px) and (max-width: 412px) {
   .products {
     display: flex;
     flex-direction: column;
